--- a/assets/style/index.scss
+++ b/assets/style/index.scss
@@ -34,6 +34,7 @@ $buttonStatus: (
 
 $shiftScreenColor: #ffe232;
 $shiftScreenTextColor: #ff370e;
+$shiftScreenFontSize: 70px;
 
 $textColor: #ffffff;
 $backgroundColor: #1b191a;
@@ -182,7 +183,7 @@ body {
 .shift {
   background: $shiftScreenColor;
   width: 100%;
-  height: calc(100% - 105px);
+  height: calc(100% - ($ftRpmBarHeight + $ftRpmFontSize + ($ftRpmBarHeight / 3) + 10px));
   margin-top: 15px;
   display: grid;
   place-items: center;
@@ -190,6 +191,6 @@ body {
   h1 {
     color: $shiftScreenTextColor;
     font-weight: bold;
-    font-size: 115px;
+    font-size: $shiftScreenFontSize;
   }
 }
